img format change

--- a/Gportfolio-details copy.html
+++ b/Gportfolio-details copy.html
@@ -52,34 +52,34 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/gs0.png" alt="">
+                  <img src="assets/img/portfolio/gs0.webp" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/gs1.png" alt="">
+                  <img src="assets/img/portfolio/gs1.webp" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/gs2.png" alt="">
+                  <img src="assets/img/portfolio/gs2.webp" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/gs3.png" alt="">
+                  <img src="assets/img/portfolio/gs3.webp" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/gs4.png" alt="">
+                  <img src="assets/img/portfolio/gs4.webp" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/gs5.png" alt="">
+                  <img src="assets/img/portfolio/gs5.webp" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/gs6.png" alt="">
+                  <img src="assets/img/portfolio/gs6.webp" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/gs7.png" alt="">
+                  <img src="assets/img/portfolio/gs7.webp" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/gs8.png" alt="">
+                  <img src="assets/img/portfolio/gs8.webp" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/gs9.png" alt="">
+                  <img src="assets/img/portfolio/gs9.webp" alt="">
                 </div>
 
               
