--- a/Tportfolio-details copy 2.html
+++ b/Tportfolio-details copy 2.html
@@ -52,22 +52,22 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/tuc0.jpg" alt="">
+                  <img src="assets/img/portfolio/tuc0.webp" alt="">
                 </div>
 
               
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/tuc1.jpg" alt="">
+                  <img src="assets/img/portfolio/tuc1.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/tuc2.jpg" alt="">
+                  <img src="assets/img/portfolio/tuc2.webp" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/tuc3.jpg" alt="">
+                  <img src="assets/img/portfolio/tuc3.webp" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/tuc4.jpg" alt="">
+                  <img src="assets/img/portfolio/tuc4.webp" alt="">
                 </div>
 
               </div>
