--- a/crypto.html
+++ b/crypto.html
@@ -52,28 +52,28 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/crypto content.png" alt="">
+                  <img src="assets/img/portfolio/crypto content.webp" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/crypto content white.png" alt="">
+                  <img src="assets/img/portfolio/crypto content white.webp" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/crypto content2.png" alt="">
+                  <img src="assets/img/portfolio/crypto content2.webp" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/crypto content2 white.png" alt="">
+                  <img src="assets/img/portfolio/crypto content2 white.webp" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/crypto content3.png" alt="">
+                  <img src="assets/img/portfolio/crypto content3.webp" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/crypto content3 white.png" alt="">
+                  <img src="assets/img/portfolio/crypto content3 white.webp" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/crypto content4.png" alt="">
+                  <img src="assets/img/portfolio/crypto content4.webp" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/crypto content4 white.png" alt="">
+                  <img src="assets/img/portfolio/crypto content4 white.webp" alt="">
                 </div>
              
 
