--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="assets/img/africa.jpg" class="img-fluid" alt="">
+          <img src="assets/img/africa.webp" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>UI/UX Designer</h3>
@@ -322,7 +322,7 @@
                   People ignore design that ignores people.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p> -->
-                <img src="assets/img/frank-chimero.png" alt="">
+                <img src="assets/img/frank-chimero.webp" alt="">
                 <!-- <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt=""> -->
                 <!-- <h3>Frank Chimero</h3>
                 <h4>Designer</h4> -->
@@ -331,25 +331,25 @@
   
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/apple.png" alt="">
+                <img src="assets/img/apple.webp" alt="">
               </div>
             </div><!-- End testimonial item -->
   
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/bob.png" alt="">
+                <img src="assets/img/bob.webp" alt="">
               </div>
             </div><!-- End testimonial item -->
   
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/rand.png" alt="">
+                <img src="assets/img/rand.webp" alt="">
               </div>
             </div><!-- End testimonial item -->
   
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/pail.png" alt="">
+                <img src="assets/img/pail.webp" alt="">
               </div>
             </div><!-- End testimonial item -->
   
@@ -644,7 +644,7 @@ exciting information about Rwanda
 
         <div class="col-lg-6 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/gymbuddy-img.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/gymbuddy-img.webp" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Fitness App</h4>
               <div class="portfolio-links">
@@ -657,7 +657,7 @@ exciting information about Rwanda
 
         <div class="col-lg-6 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/music.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/music.webp" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Music App</h4>
               <div class="portfolio-links">
@@ -671,7 +671,7 @@ exciting information about Rwanda
         
         <div class="col-lg-6 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/crypto banner.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/crypto banner.webp" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Crypto Mobile App</h4>
               <div class="portfolio-links">
@@ -685,7 +685,7 @@ exciting information about Rwanda
 
         <div class="col-lg-6 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/tuc-img.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/tuc-banner.webp" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Collaborative Platform</h4>
               <div class="portfolio-links">
@@ -700,7 +700,7 @@ exciting information about Rwanda
         
         <div class="col-lg-6 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/rwanda-img.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/rwanda-img.webp" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Travel mobile app</h4>
               <div class="portfolio-links">
