--- a/Rportfolio-details copy 3.html
+++ b/Rportfolio-details copy 3.html
@@ -52,7 +52,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/r1.png" alt="">
+                  <img src="assets/img/portfolio/r1.webp" alt="">
                 </div>
 
                 <!-- <div class="swiper-slide">
