--- a/mportfolio-details.html
+++ b/mportfolio-details.html
@@ -52,19 +52,19 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/m1.png" alt="">
+                  <img src="assets/img/portfolio/m1.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/m2.png" alt="">
+                  <img src="assets/img/portfolio/m2.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/m3.png" alt="">
+                  <img src="assets/img/portfolio/m3.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/m4.png" alt="">
+                  <img src="assets/img/portfolio/m4.webp" alt="">
                 </div>
 
               </div>
