--- a/Tportfolio-details copy 2.html
+++ b/Tportfolio-details copy 2.html
@@ -52,6 +52,9 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
+                  <img src="assets/img/portfolio/tuc0.5.webp" alt="">
+                </div>
+                <div class="swiper-slide">
                   <img src="assets/img/portfolio/tuc0.webp" alt="">
                 </div>
 
@@ -68,6 +71,18 @@
                 </div>
                 <div class="swiper-slide">
                   <img src="assets/img/portfolio/tuc4.webp" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/tuc5.webp" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/tuc6.webp" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/tuc7.webp" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/tuc8.webp" alt="">
                 </div>
 
               </div>
