--- a/mportfolio-details.html
+++ b/mportfolio-details.html
@@ -87,7 +87,7 @@
             </p>
 
             <div onclick="musicz()">
-              <a href="">View Project</a>
+              <a href="https://hibee01.github.io/music-app/" target="_blank">View Project</a>
             </div>
           </div>
 
