--- a/Rportfolio-details copy 3.html
+++ b/Rportfolio-details copy 3.html
@@ -86,7 +86,7 @@ National Park.
             </p>
 
             <div onclick="rwanda()">
-              <a href="">View Project</a>
+              <a href="https://hibee01.github.io/Rwandaful/" target="_blank">View Project</a>
             </div>
           </div>
 
