--- a/Rportfolio-details copy 3.html
+++ b/Rportfolio-details copy 3.html
@@ -85,9 +85,13 @@ rwanda, from destinations, events, things to do, people and cultures.
 National Park.
             </p>
 
-            <div onclick="rwanda()">
+            <button onclick="rwanda()" class="project-btn">
               <a href="https://hibee01.github.io/Rwandaful/" target="_blank">View Project</a>
-            </div>
+            </button>
+
+            <!-- <div onclick="rwanda()">
+              <a href="https://hibee01.github.io/Rwandaful/" target="_blank">View Project</a>
+            </div> -->
           </div>
 
         </div>
