--- a/Tportfolio-details copy 2.html
+++ b/Tportfolio-details copy 2.html
@@ -103,10 +103,10 @@
               An open innovation platform that creates bridges for ideators, entrepreneurs to connect to investors, corporate partners, experts and other organizations they need to scale. It helps good ideas reach their full potential through collaborations.
             </p>
 
-            <div onclick="tuc()">
-              <a href="">View Project</a>
-            </div>
-          </div>
+            
+            <button class="project-btn" onclick="tuc()">
+              <a href="https://hibee01.github.io/Tuc/" target="_blank">View Project</a>
+            </button>
 
         </div>
 
