--- a/mportfolio-details.html
+++ b/mportfolio-details.html
@@ -86,9 +86,13 @@
               A music app where users can listen to their favorite songs, radio stations & albums  in lossless streaming audio quality with friends from all over the world for a cheap monthly subsciption fee. It helps improves the overall music experiences of the users
             </p>
 
-            <div onclick="musicz()">
+            <button class="project-btn" onclick="musicz()">
               <a href="https://hibee01.github.io/music-app/" target="_blank">View Project</a>
-            </div>
+            </button>
+
+            <!-- <div onclick="musicz()">
+              <a href="https://hibee01.github.io/music-app/" target="_blank">View Project</a>
+            </div> -->
           </div>
 
         </div>
