--- a/index.html
+++ b/index.html
@@ -649,10 +649,9 @@ exciting information about Rwanda
             <img src="assets/img/portfolio/crypto banner.webp" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Crypto Mobile App</h4>
-              <div class="portfolio-links">
-                <!-- <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a> -->
-                <a href="crypto.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
-              </div>
+              <button class="project-btn-mb portfolio-links">
+                <a href="crypto.html" target="_blank" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details">View Project</a>
+              </button>
             </div>
           </div>
         </div>
@@ -663,10 +662,9 @@ exciting information about Rwanda
             <img src="assets/img/portfolio/tuc-banner.webp" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Collaborative Platform</h4>
-              <div class="portfolio-links">
-                <!-- <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a> -->
-                <a href="Tportfolio-details copy 2.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
-              </div>
+              <button class="project-btn-mb portfolio-links">
+                <a href="Tportfolio-details copy 2.html" target="_blank" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details">View Project</a>
+              </button>
             </div>
           </div>
         </div>
@@ -676,10 +674,9 @@ exciting information about Rwanda
             <img src="assets/img/portfolio/gymbuddy-img.webp" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Fitness App</h4>
-              <div class="portfolio-links">
-                <!-- <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a> -->
-                <a href="Gportfolio-details copy.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
-              </div>
+              <button class="project-btn-mb portfolio-links">
+                <a href="Gportfolio-details copy.html" target="_blank" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details">View Project</a>
+              </button>
             </div>
           </div>
         </div>
@@ -689,10 +686,13 @@ exciting information about Rwanda
             <img src="assets/img/portfolio/music.webp" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Music App</h4>
-              <div class="portfolio-links">
-                <!-- <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a> -->
+              <button onclick="musicz()" class="project-btn-mb portfolio-links">
+                <a href="mportfolio-details.html" target="_blank" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details">View Project</a>
+              </button>
+            <!--   <div class="portfolio-links">
+                <!~~ <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a> ~~>
                 <a href="mportfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -705,10 +705,9 @@ exciting information about Rwanda
             <img src="assets/img/portfolio/rwanda-img.webp" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Travel mobile app</h4>
-              <div class="portfolio-links">
-                <!-- <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a> -->
-                <a href="Rportfolio-details copy 3.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
-              </div>
+              <button class="project-btn-mb portfolio-links">
+                <a href="Rportfolio-details copy 3.html" target="_blank" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details">View Project</a>
+              </button>
             </div>
           </div>
         </div>
