--- a/mportfolio-details.html
+++ b/mportfolio-details.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,7 +6,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Personal Bootstrap Template</title>
+  <title>Portfolio Details - Music App</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -54,11 +55,10 @@
                 <div class="swiper-slide">
                   <img src="assets/img/portfolio/m1.webp" alt="">
                 </div>
-
                 <div class="swiper-slide">
                   <img src="assets/img/portfolio/m2.webp" alt="">
                 </div>
-
+              
                 <div class="swiper-slide">
                   <img src="assets/img/portfolio/m3.webp" alt="">
                 </div>
@@ -83,17 +83,13 @@
             </ul>
 
             <p>
-              A music app where users can listen to their favorite songs, radio stations & albums  in lossless streaming audio quality with friends from all over the world for a cheap monthly subsciption fee. It helps improves the overall music experiences of the users
+              A music app where users can listen to their favorite songs, radio stations & albums  in lossless streaming audio quality with friends from all over the world for a cheap monthly subsciption fee. It helps improves the overall musical experience of it's users.
             </p>
 
-            <button class="project-btn" onclick="musicz()">
+            
+            <button class="project-btn" onclick="music()">
               <a href="https://hibee01.github.io/music-app/" target="_blank">View Project</a>
             </button>
-
-            <!-- <div onclick="musicz()">
-              <a href="https://hibee01.github.io/music-app/" target="_blank">View Project</a>
-            </div> -->
-          </div>
 
         </div>
 
@@ -102,7 +98,7 @@
 
   </main><!-- End #main -->
 
- 
+
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter.js"></script>
