--- a/index.html
+++ b/index.html
@@ -683,11 +683,11 @@ exciting information about Rwanda
 
         <div class="col-lg-6 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/music.webp" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/music2.webp" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Music App</h4>
-              <button onclick="musicz()" class="project-btn-mb portfolio-links">
-                <a href="mportfolio-details.html" target="_blank" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details">View Project</a>
+              <button class="project-btn-mb portfolio-links">
+                <a href="https://hibee01.github.io/music-app/" target="_blank" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details">View Project</a>
               </button>
             <!--   <div class="portfolio-links">
                 <!~~ <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a> ~~>
