--- a/index.html
+++ b/index.html
@@ -686,8 +686,8 @@ exciting information about Rwanda
             <img src="assets/img/portfolio/music2.webp" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Music App</h4>
-              <button class="project-btn-mb portfolio-links">
-                <a href="https://hibee01.github.io/music-app/" target="_blank" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details">View Project</a>
+              <button  onclick="music()" class="project-btn-mb ">
+                View Project
               </button>
             <!--   <div class="portfolio-links">
                 <!~~ <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a> ~~>
