--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@ exciting information about Rwanda
         
         <div class="col-lg-6 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/crypto banner.webp" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/crypto.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Crypto Mobile App</h4>
               <button class="project-btn-mb portfolio-links">
@@ -659,7 +659,7 @@ exciting information about Rwanda
 
         <div class="col-lg-6 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/tuc-banner.webp" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/tuc.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Collaborative Platform</h4>
               <button class="project-btn-mb portfolio-links">
@@ -702,7 +702,7 @@ exciting information about Rwanda
         
         <div class="col-lg-6 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/rwanda-img.webp" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/rwanda.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Travel mobile app</h4>
               <button class="project-btn-mb portfolio-links">
