--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
         <!-- <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
         <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="#" class="instagram"><i class="bi bi-instagram"></i></a> -->
-        <a href="#https://www.linkedin.com/in/meetadebayo/" class="linkedin"><i class="bi bi-linkedin"></i></a>
-        <a href="#mailto:bayoibiyemi1@gmail.com" class="google-plus"><i class="bi bi-google"></i></a>
+        <a href="https://www.linkedin.com/in/meetadebayo/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="mailto:bayoibiyemi1@gmail.com" class="google-plus"><i class="bi bi-google"></i></a>
       </div>
 
     </div>
@@ -746,8 +746,8 @@ exciting information about Rwanda
               <!-- <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
               <a href="#" class="facebook"><i class="bi bi-facebook"></i></a> -->
               <!-- <a href="#" class="instagram"><i class="bi bi-instagram"></i></a> -->
-              <a href="#mailto:bayoibiyemi1@gmail.com" class="google-plus"><i class="bi bi-google"></i></a>
-              <a href="#https://www.linkedin.com/in/meetadebayo/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+              <a href="mailto:bayoibiyemi1@gmail.com" class="google-plus"><i class="bi bi-google"></i></a>
+              <a href="https://www.linkedin.com/in/meetadebayo/" class="linkedin"><i class="bi bi-linkedin"></i></a>
             </div>
           </div>
         </div>
