--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@ exciting information about Rwanda
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/switch-app.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>E-commerce mobile app</h4>
+              <h4>E-commerce App Landing Page</h4>
               <button class="project-btn-mb">
                 <a href="https://switchapp.us/" target="_blank" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details">View Project</a>
               </button>
@@ -728,6 +728,42 @@ exciting information about Rwanda
               <h4>Amazon Automation Landing Page</h4>
               <button class="project-btn-mb">
                 <a href="https://switchautomations.com/" target="_blank" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details">View Project</a>
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-6 col-md-6 portfolio-item filter-land">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/rosabon.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Financial Landing Page</h4>
+              <button class="project-btn-mb">
+                <a href="https://hibee01.github.io/rosabon-page/" target="_blank" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details">View Project</a>
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-6 col-md-6 portfolio-item filter-land">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/incash-employer.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Employer Loan Landing Page</h4>
+              <button class="project-btn-mb">
+                <a href="https://hibee01.github.io/Incash-Employer/" target="_blank" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details">View Project</a>
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-6 col-md-6 portfolio-item filter-land">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/employee.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Employee Loan Landing Page</h4>
+              <button class="project-btn-mb">
+                <a href="https://hibee01.github.io/Incash-employee/" target="_blank" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details">View Project</a>
               </button>
             </div>
           </div>
