--- a/Tportfolio-details copy 2.html
+++ b/Tportfolio-details copy 2.html
@@ -104,7 +104,7 @@
             </p>
 
             
-            <button class="project-btn" onclick="tuc()">
+            <button class="project-btn-mb" onclick="tuc()">
               <a href="https://hibee01.github.io/Tuc/" target="_blank">View Project</a>
             </button>
 
