--- a/Rportfolio-details copy 3.html
+++ b/Rportfolio-details copy 3.html
@@ -85,7 +85,7 @@ rwanda, from destinations, events, things to do, people and cultures.
 National Park.
             </p>
 
-            <button onclick="rwanda()" class="project-btn">
+            <button onclick="rwanda()" class="project-btn-mb">
               <a href="https://hibee01.github.io/Rwandaful/" target="_blank">View Project</a>
             </button>
 
