--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@ exciting information about Rwanda
             <div class="portfolio-info">
               <h4>Crypto Exchange Landing Page</h4>
               <button class="project-btn-mb">
-                <a href="https://switchapp.us/" target="_blank" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details">View Project</a>
+                <a href="https://hibee01.github.io/Crpto-landing/" target="_blank" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details">View Project</a>
               </button>
             </div>
           </div>
