--- a/cryptoexchange.html
+++ b/cryptoexchange.html
@@ -84,7 +84,7 @@
 
             
             <button class="project-btn-mb">
-              <a href="#">View Project</a>
+              <a href="https://hibee01.github.io/crypto-c/" target="_blank">View Project</a>
             </button>
 
         </div>
