--- a/index.html
+++ b/index.html
@@ -727,8 +727,8 @@ exciting information about Rwanda
             <img src="assets/img/portfolio/Crypto-landing.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Crypto Exchange Landing Page</h4>
-              <button class="project-btn-mb">
-                <a href="https://hibee01.github.io/Crpto-landing/" target="_blank" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details">View Project</a>
+              <button  onclick="crptol()"          class="project-btn-mb ">
+                View Project
               </button>
             </div>
           </div>
