--- a/cryptoexchange.html
+++ b/cryptoexchange.html
@@ -59,6 +59,9 @@
                 <div class="swiper-slide">
                   <img src="assets/img/portfolio/cryp-2.jpg" alt="">
                 </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/cryp-3.jpg" alt="">
+                </div>
                 
               
               </div>
