--- a/index.html
+++ b/index.html
@@ -673,9 +673,9 @@ exciting information about Rwanda
         
         <div class="col-lg-6 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/crypto.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/crypto-white.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Crypto Mobile App</h4>
+              <h4>Crypto Wallet App</h4>
               <button class="project-btn-mb">
                 <a href="crypto.html" target="_blank" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details">View Project</a>
               </button>
