--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@ exciting information about Rwanda
             </div>
           </div>
         </div>
-      
+   <!--    
         <div class="col-lg-6 col-md-6 portfolio-item filter-land">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/switch-auto.jpg" class="img-fluid" alt="">
@@ -795,7 +795,7 @@ exciting information about Rwanda
               </button>
             </div>
           </div>
-        </div>
+        </div> -->
 
     
 
