--- a/index.html
+++ b/index.html
@@ -670,8 +670,20 @@ exciting information about Rwanda
             </div>
           </div>
         </div>
+
+        <div class="col-lg-6 col-md-6 portfolio-item filter-land">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/avat.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Digital Exchange</h4>
+              <button  onclick="avat()" class="project-btn-mb ">
+                View Project
+              </button>
+            </div>
+          </div>
+        </div>
         
-        <div class="col-lg-6 col-md-6 portfolio-item filter-app">
+        <!-- <div class="col-lg-6 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/crypto-white.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -681,7 +693,9 @@ exciting information about Rwanda
               </button>
             </div>
           </div>
-        </div>
+        </div> -->
+
+     
 
 
         <div class="col-lg-6 col-md-6 portfolio-item filter-app">
@@ -727,7 +741,7 @@ exciting information about Rwanda
             <img src="assets/img/portfolio/Crypto-landing.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Crypto Exchange Landing Page</h4>
-              <button  onclick="crptol()"          class="project-btn-mb ">
+              <button  onclick="crptol()"  class="project-btn-mb ">
                 View Project
               </button>
             </div>
