--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@ exciting information about Rwanda
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/avat.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Digital Exchange</h4>
+              <h4>Digital Exchange Wallet</h4>
               <button  onclick="avat()" class="project-btn-mb ">
                 View Project
               </button>
