--- a/Gportfolio-details copy.html
+++ b/Gportfolio-details copy.html
@@ -95,17 +95,17 @@
             <h3>Project information</h3>
             <ul>
               <li><strong>Category</strong>: App Design</li>
-              <li><strong>Client</strong>: Private</li>
               <li><strong>Project year</strong>: 2022</li>
+              <li><strong>Purpose</strong>: Research Only</li>
               <!-- <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li> -->
             </ul>
 
             <p>
-              A fitness app that can perform various functions such as allowing users to set fitness goals, tracking caloric intake, gathering workout ideas, and sharing progress on social media to facilitate healthy behavior change. They can be used as a platform to promote healthy behavior change with personalized workouts, fitness advice and nutrition plans. The app also provide gamification elements for creating healthy competition among friends and family, it serves as an incentive users to be more motivated.
+            This is a fitness app prototype mainly for research purpose that can perform various functions such as allowing users to set fitness goals, tracking caloric intake, gathering workout ideas, and sharing progress on social media to facilitate healthy behavior change. They can be used as a platform to promote healthy behavioral changes with personalized workouts, fitness advice and nutrition plans. The app also provide gamification elements for creating healthy competition among friends and family, it serves as an incentive for users to be more motivated.
             </p>
 
             <div onclick="gym()" class="gymbuddy">
-              <a href="">Test this app</a>
+              <a href="">Test Prototype</a>
             </div>
           </div>
 
