--- a/index.html
+++ b/index.html
@@ -725,6 +725,18 @@ exciting information about Rwanda
         
         <div class="col-lg-6 col-md-6 portfolio-item filter-land">
           <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/fashion.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Fashion E-commerce Landing Page</h4>
+              <button  onclick="switchland()" class="project-btn-mb ">
+                View Project
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-6 col-md-6 portfolio-item filter-land">
+          <div class="portfolio-wrap">
             <img src="assets/img/portfolio/switch-app.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>E-commerce App Landing Page</h4>
