--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@ exciting information about Rwanda
             <img src="assets/img/portfolio/fashion.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Fashion E-commerce Landing Page</h4>
-              <button  onclick="switchland()" class="project-btn-mb ">
+              <button  onclick="fashion()" class="project-btn-mb ">
                 View Project
               </button>
             </div>
