--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@ exciting information about Rwanda
         </div>
 
 
-        <div class="col-lg-6 col-md-6 portfolio-item filter-land">
+        <div class="col-lg-6 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/avat.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -671,7 +671,7 @@ exciting information about Rwanda
         
 
 
-        <div class="col-lg-6 col-md-6 portfolio-item filter-app">
+        <div class="col-lg-6 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/crptov2.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
