--- a/index.html
+++ b/index.html
@@ -747,6 +747,18 @@ exciting information about Rwanda
           </div>
         </div>
 
+        <div class="col-lg-6 col-md-6 portfolio-item filter-land">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/avat-landing.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Avat crpto App Landing Page</h4>
+              <button  onclick="avatland()" class="project-btn-mb ">
+                View Project
+              </button>
+            </div>
+          </div>
+        </div>
+
         
         <div class="col-lg-6 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
