--- a/Gportfolio-details copy.html
+++ b/Gportfolio-details copy.html
@@ -107,6 +107,9 @@
             <div onclick="gym()" class="gymbuddy">
               <a href="">Test Prototype</a>
             </div>
+            <div class="gymbuddy-mobile">
+              <a href="##">Access this site with a pc to test the prototype</a>
+            </div>
           </div>
 
         </div>
