--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@ exciting information about Rwanda
         </div>
     
         
-        <div class="col-lg-6 col-md-6 portfolio-item filter-land">
+        <div class="col-lg-6 col-md-6 portfolio-item filter-land filter-card">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/fashion.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
