--- a/landingpages.html
+++ b/landingpages.html
@@ -50,36 +50,22 @@
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
+                <!-- <div class="swiper-slide">
+                  <img src="assets/img/portfolio/l1.jpg" alt="">
+                </div> -->
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/gs0.webp" alt="">
+                  <img src="assets/img/portfolio/fashion.jpg" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/gs1.webp" alt="">
+                  <img src="assets/img/portfolio/avat-landing.jpg" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/gs2.webp" alt="">
+                  <img src="assets/img/portfolio/Crypto-landing.jpg" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/gs3.webp" alt="">
+                  <img src="assets/img/portfolio/l1.jpg" alt="">
                 </div>
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/gs4.webp" alt="">
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/gs5.webp" alt="">
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/gs6.webp" alt="">
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/gs7.webp" alt="">
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/gs8.webp" alt="">
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/gs9.webp" alt="">
-                </div>
+             
 
               
 
@@ -91,24 +77,27 @@
           </div>
 
           <div class="col-lg-12 portfolio-info">
-            <h3>Project information</h3>
-            <ul>
+            <h3>Projects information</h3>
+          <!--   <ul>
               <li><strong>Category</strong>: App Design</li>
               <li><strong>Project year</strong>: 2022</li>
               <li><strong>Purpose</strong>: Research Only</li>
-              <!-- <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li> -->
-            </ul>
+              <!~~ <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li> ~~>
+            </ul> -->
 
-            <p>
+            <!-- <p>
             This is a fitness app prototype mainly for research purpose that can perform various functions such as allowing users to set fitness goals, tracking caloric intake, gathering workout ideas, and sharing progress on social media to facilitate healthy behavior change. They can be used as a platform to promote healthy behavioral changes with personalized workouts, fitness advice and nutrition plans. The app also provide gamification elements for creating healthy competition among friends and family, it serves as an incentive for users to be more motivated.
+            </p> -->
+            <p>
+            These are compilation of landing pages I've worked on in the past.
             </p>
-
+<!-- 
             <div onclick="gym()" class="gymbuddy">
               <a href="">Test Prototype</a>
-            </div>
-            <div class="gymbuddy-mobile">
+            </div> -->
+            <!-- <div class="gymbuddy-mobile">
               <a href="##">Access this site with a pc to test the prototype</a>
-            </div>
+            </div> -->
           </div>
 
         </div>
