--- a/landingpages.html
+++ b/landingpages.html
@@ -65,6 +65,9 @@
                 <div class="swiper-slide">
                   <img src="assets/img/portfolio/l1.jpg" alt="">
                 </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/l2.jpg" alt="">
+                </div>
              
 
               
@@ -89,8 +92,20 @@
             This is a fitness app prototype mainly for research purpose that can perform various functions such as allowing users to set fitness goals, tracking caloric intake, gathering workout ideas, and sharing progress on social media to facilitate healthy behavior change. They can be used as a platform to promote healthy behavioral changes with personalized workouts, fitness advice and nutrition plans. The app also provide gamification elements for creating healthy competition among friends and family, it serves as an incentive for users to be more motivated.
             </p> -->
             <p>
-            These are compilation of landing pages I've worked on in the past.
+            These are compilation of landing pages I've worked on in the past from brands.
             </p>
+            <p>
+            Top brands            
+            </p>
+            <div class="landing-logos">
+              <ul>
+                <li><img src="assets/img/portfolio/pod.svg" alt=""></li>
+                <li><img src="assets/img/portfolio/switch-logo.svg" alt=""></li>
+                <li><img src="assets/img/portfolio/Rehydr8.svg" alt=""></li>
+                <li><img src="assets/img/portfolio/incash-logo-tablet.svg" alt=""></li>
+                <li><img class="tuc-logo-land" src="assets/img/portfolio/tuc.svg" alt=""></li>
+              </ul>
+            </div>
 <!-- 
             <div onclick="gym()" class="gymbuddy">
               <a href="">Test Prototype</a>
