--- a/landingpages.html
+++ b/landingpages.html
@@ -100,10 +100,12 @@
             <div class="landing-logos">
               <ul>
                 <li><img src="assets/img/portfolio/pod.svg" alt=""></li>
+                <li><img src="assets/img/portfolio/tmb.svg" alt=""></li>
                 <li><img src="assets/img/portfolio/switch-logo.svg" alt=""></li>
                 <li><img src="assets/img/portfolio/Rehydr8.svg" alt=""></li>
                 <li><img src="assets/img/portfolio/incash-logo-tablet.svg" alt=""></li>
                 <li><img class="tuc-logo-land" src="assets/img/portfolio/tuc.svg" alt=""></li>
+               
               </ul>
             </div>
 <!-- 
