--- a/index.html
+++ b/index.html
@@ -630,11 +630,11 @@ exciting information about Rwanda
       <div class="row">
         <div class="col-lg-12 d-flex justify-content-center">
           <ul id="portfolio-flters">
-            <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-app">App</li>
-            <li data-filter=".filter-web">Web</li>
+            <!-- <li data-filter="*" class="filter-active">All</li> -->
+            <li data-filter="* filter-app">Recent</li>
+            <li data-filter=".filter-web">Others</li>
             <li data-filter=".filter-land">Landing Page</li>
-            <li data-filter=".filter-card">Visual Experiment</li>
+            <!-- <li data-filter=".filter-card">Visual Experiment</li> -->
           </ul>
         </div>
       </div>
@@ -655,7 +655,7 @@ exciting information about Rwanda
         </div>
 
 
-        <div class="col-lg-6 col-md-6 portfolio-item filter-app">
+        <div class="col-lg-6 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/avat.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -771,7 +771,7 @@ exciting information about Rwanda
         </div> -->
 
         
-        <div class="col-lg-6 col-md-6 portfolio-item filter-app">
+        <div class="col-lg-6 col-md-6 portfolio-item filter-land">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/fashion.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
