--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+<!--     <!~~ Global site tag (gtag.js) - Google Analytics ~~>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-XKY8DY3PJC"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -44,7 +44,7 @@
   gtag('js', new Date());
 
   gtag('config', 'G-XKY8DY3PJC');
-</script>
+</script> -->
 </head>
 
 <body>
